--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 /node_modules
 /public/hot
-/public/storage
-/storage/*.key
+
 /vendor
+.DS_store
+storage/images/
+images/0ac13f520d5e9872b24197871aac0fa9.png
 .env
 .env.backup
 .phpunit.result.cache
